--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import SomeAstroComponent from '../components/do-this-instead.astro';
 ---
 
 <html lang="en">
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+<SomeAstroComponent/>
 	</body>
 </html>
