add tailwind in secs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ import SomeAstroComponent from '../components/do-this-instead.astro';
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1 class="text-3xl font-bold underline">
+            Hello Tailwind + Astro
+        </h1>
 <SomeAstroComponent/>
 	</body>
 </html>
