add tailwind button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import SomeAstroComponent from '../components/do-this-instead.astro';
+import Button from '../components/do-this-instead.astro';
 ---
 
 <html lang="en">
@@ -14,6 +14,6 @@ import SomeAstroComponent from '../components/do-this-instead.astro';
 		<h1 class="text-3xl font-bold underline">
             Hello Tailwind + Astro
         </h1>
-<SomeAstroComponent/>
+        <Button>Click Me</Button>
 	</body>
 </html>
