add simple markdown with tailwind

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,6 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     Hello Tailwind + Astro
   </h1>
   <Button>Click Me</Button>
+  <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
 </BaseLayout>
 
