test vercel deploy automatically

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,7 @@
 ---
 	const { name } = Astro.props;
 ---
-<p>Hello {name}!</p>
-<slot />
+<div class="grid place-items-center h-screen content-center">
+  <p>Hello {name}!</p>
+  <slot />
+</div>
