--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     Hello Tailwind + Astro
   </h1>
   <Button>Click Me</Button>
-  <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
+    <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
+    <a href="/nextui" class="p-4 underline">NextUI Demo</a>
 </BaseLayout>
 
