--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
+import '@/styles/globals.css'
 const { name } = Astro.props;
 ---
 <!doctype html>
