--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import Button from '../components/do-this-instead.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import { Button } from "@/components/ui/button"
 ---
 <BaseLayout name="ming">
-  <h1 class="text-3xl font-bold underline">
-    Hello Tailwind + Astro
-  </h1>
   <Button>Click Me</Button>
   <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
 </BaseLayout>
