--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,15 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { Button } from "@/components/ui/button"
 import { ModeToggle } from '@/components/ModeToggle';
+import { CardWithForm } from '@/components/CardWithForm';
+import { SelectDemo } from '@/components/SelectDemo';
+import { TableDemo } from '@/components/TableDemo';
 ---
 <BaseLayout name="ming">
 <ModeToggle client:load />
+<CardWithForm client:load />
+<SelectDemo client:load/>
+<TableDemo client:load/>
   <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
 </BaseLayout>
 
