https://ui.shadcn.com/, tosupport noth nextUI, and shadcnUI, but still recommend to use shadcnUI, v0.0.1-ui

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const { name } = Astro.props;
 	   	<ViewTransitions />
 	</head>
 	<body>
-	<div class="grid place-items-center h-screen content-center">
+	<div>
         <p>Hello {name}!</p>
 		<slot />
 	</div>
