--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,6 @@ import { TableDemo } from '@/components/TableDemo';
 <SelectDemo client:load/>
 <TableDemo client:load/>
   <a href="/markdown-page" class="p-4 underline">Markdown is also supported...</a>
+  <a href="/nextui" class="p-4 underline">NextUI Demo</a>
 </BaseLayout>
 
